Corrected letter spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ img {
 p, li {
     font-size: 16px;
     line-height: 2;
-    letter-spacing: 2;
+    letter-spacing: 2px;
     color: black;
 }
 
